# sap-ops-bot

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py  mcp_server.py
backend/app/api/: auth.py  chat.py  copilot.py  feedback.py  knowledge.py
backend/app/core/: auth.py  knowledge_base.py  llm_client.py  memory_store.py  rag_engine.py  rate_limiter.py
backend/app/core/skills/: auth_management.py  base.py  cts_management.py  data_analysis.py  error_analysis.py  general.py  registry.py
backend/app/data/sap_knowledge/: seed_data.json
backend/app/models/: database.py  schemas.py
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_feedback.py  test_hybrid_search.py  test_knowledge.py  test_llm_client.py  test_mcp.py  test_memory_store.py  test_performance.py  test_rag.py  test_rate_limiter.py  test_skills.py
copilot/: connector-spec.json
desktop/: .env.example  CLAUDE.md  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  tsconfig.preload.json  tsconfig.renderer.json
desktop/docs/: ARCHITECTURE.md  CONTRIBUTING.md  GETTING-STARTED.md
desktop/docs/API/: AGENTS.md  IPC-PROTOCOL.md  SKILLS.md
desktop/docs/USER-GUIDE/: CUSTOM-AGENTS.md  (+3 more)
desktop/scripts/: check-runtime.mjs  start-electron.mjs
docs/: BRD.md  PRD.md  TRD.md
frontend/: Dockerfile  package-lock.json  package.json  playwright.config.ts  tsconfig.json
frontend/e2e/: knowledge.spec.ts  login.spec.ts  navigation.spec.ts
frontend/src/: App.tsx
(+285 files in other folders)
